--- a/work/index.html
+++ b/work/index.html
@@ -14,3 +14,12 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+<style>
+  /* video {
+  filter: blur(4px) invert(1) opacity(0.5);
+} */
+  video {
+    max-width: 100%;
+    width: 320px;
+  }
+</style>
