--- a/work/index.html
+++ b/work/index.html
@@ -9,8 +9,15 @@
   <body>
     <h1>Realtime communication with WebRTC</h1>
 
-    <video autoplay playinside></video>
+    <video id="localVideo" autoplay playinside></video>
+    <video id="remoteVideo" autoplay playinside></video>
 
+    <div>
+      <button id="startButton">Start</button>
+      <button id="callButton">Call</button>
+      <button id="hangupButton">Hang Up</button>
+    </div>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
