--- a/work/index.html
+++ b/work/index.html
@@ -9,13 +9,26 @@
   <body>
     <h1>Realtime communication with WebRTC</h1>
 
-    <video id="localVideo" autoplay playinside></video>
-    <video id="remoteVideo" autoplay playinside></video>
+    <!-- <video id="localVideo" autoplay playinside></video>
+    <video id="remoteVideo" autoplay playinside></video> -->
 
-    <div>
+    <!-- <div>
       <button id="startButton">Start</button>
       <button id="callButton">Call</button>
       <button id="hangupButton">Hang Up</button>
+    </div> -->
+
+    <textarea
+      id="dataChannelSend"
+      disabled
+      placeholder="Press Start, enter some text, the press send."
+    ></textarea>
+    <textarea id="dataChannelReceive" disabled></textarea>
+
+    <div id="buttons">
+      <button id="startButton">Start</button>
+      <button id="sendButton">Send</button>
+      <button id="closeButton">Stop</button>
     </div>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="js/main.js"></script>
