--- a/work/index.html
+++ b/work/index.html
@@ -3,22 +3,33 @@
   <head>
     <title>Realtime communication with WebRTC</title>
 
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
 
   <body>
     <h1>Realtime communication with WebRTC</h1>
 
+    <h2><span>Room URL: </span><span id="url">...</span></h2>
+
+    <div id="videoCanvas">
+      <video id="camera" autoplay></video>
+      <canvas id="photo"></canvas>
+    </div>
+
+    <div id="buttons">
+      <button id="snap">Snap</button><span> then </span
+      ><button id="send">Send</button>
+      <span> or </span>
+      <button id="snapAndSend">Snap &amp; Send</button>
+    </div>
+
+    <div id="incoming">
+      <h2>Incoming photos</h2>
+      <div id="trail"></div>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
-<style>
-  /* video {
-  filter: blur(4px) invert(1) opacity(0.5);
-} */
-  video {
-    max-width: 100%;
-    width: 320px;
-  }
-</style>
